fixed scrolling to make undo button visible

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,6 +9,10 @@
         '"Segoe UI Emoji"', '"Segoe UI Symbol"';
 }
 
+html {
+    position: fixed;
+}
+
 html,
 body,
 #root {
